<?xml version="1.0"?>
<package format="2">
  <name>deeporange13_msgs</name>
  <version>1.0.0</version>
  <description>
    Drive-by-wire messages for the control on DO13
  </description>

  <license>BSD</license>

  <author email="prakhag@clemson.edu">Prakhar Gupta</author>
  <maintainer email="cparedis@clemson.edu">Chris Paredis</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>

</package>
